# Aether-Gazer-Voice-Patch

./: .gitignore  AetherGazer-VoicePatch.ini  CMakeLists.txt  README.md
src/: common.cpp  dllmain.cpp  il2cpp.cpp  loader.cpp  patch_internal.hpp  state.cpp  voice_redirect.cpp
